unpackaged/main/default/objects/Campaign_Partner__c/Campaign_Partner__c.object-meta.xml
<CustomObject>
    <description>Junction object between Campaign and Partner</description>
    <label>Campaign Partner</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Campaign Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>