unpackaged/main/default/objects/Campaign_Partner__c/fields/API_Integration_Description__c.field-meta.xml
<CustomField>
    <fullName>API_Integration_Description__c</fullName>
    <label>API Integration Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>