unpackaged/main/default/objects/Campaign_Partner__c/fields/Assigned_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to bypass selections and ensure that any vendor submitting records to our system will be assigned to this campaign partner.  This works in conjunction of other automations to ensure records go to the right place.</description>
    <inlineHelpText>Designated Vendor that all intakes submitted by vendor during CV process should be attached to this Campaign Partner.</inlineHelpText>
    <label>Assigned Vendor</label>
    <referenceTo>Intake_Vendor__c</referenceTo>
    <relationshipLabel>Campaign Partners</relationshipLabel>
    <relationshipName>Campaign_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>