unpackaged/main/default/objects/Campaign_Partner__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Campaign object this Campaign/Partner junction object is related to.</description>
    <inlineHelpText>Lookup to the Campaign object this Campaign/Partner junction object is related to.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Campaign Partners</relationshipLabel>
    <relationshipName>Campaign_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>