unpackaged/main/default/objects/Campaign_Partner__c/fields/Campaign_Total_Intakes_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Total_Intakes_Assigned__c</fullName>
    <formula>Campaign__r.Total_Intakes_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Total Intakes Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>