unpackaged/main/default/objects/Campaign_Partner__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>SOQL query constructed by the Campaign Partner Query Builder. This query will determine whether an individual Intake meets the criteria to be referred to this Campaign/Partner combination or not.</description>
    <inlineHelpText>SOQL query constructed by the Campaign Partner Query Builder. This query will determine whether an individual Intake meets the criteria to be referred to this Campaign/Partner combination or not.</inlineHelpText>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>