unpackaged/main/default/objects/Campaign_Partner__c/fields/Criteria_Description__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Description__c</fullName>
    <description>Plain text / user friendly explanation of the Criteria</description>
    <inlineHelpText>Plain text / user friendly explanation of the Criteria</inlineHelpText>
    <label>Criteria Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>