unpackaged/main/default/objects/Campaign_Partner__c/fields/Criteria_History__c.field-meta.xml
<CustomField>
    <fullName>Criteria_History__c</fullName>
    <description>Field to store history / changes to the Criteria field so that changes can be easily reverted. Must be populated manually.</description>
    <inlineHelpText>Field to store history / changes to the Criteria field so that changes can be easily reverted. Must be populated manually.</inlineHelpText>
    <label>Criteria History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>