unpackaged/main/default/objects/Campaign_Partner__c/fields/Delivery_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Flow_Name__c</fullName>
    <label>Delivery Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>