unpackaged/main/default/objects/Campaign_Partner__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>