unpackaged/main/default/objects/Campaign_Partner__c/fields/Difference_Between_Exp_and_Actual_Dist__c.field-meta.xml
<CustomField>
    <fullName>Difference_Between_Exp_and_Actual_Dist__c</fullName>
    <description>Expected Distribution minus Intakes Assigned</description>
    <formula>Expected_Distribution__c -  Intakes_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected Distribution minus Intakes Assigned</inlineHelpText>
    <label>Difference Between Exp and Actual Dist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>