unpackaged/main/default/objects/Campaign_Partner__c/fields/Distribution_Percent__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Percent__c</fullName>
    <description>This field determines the split of qualified intakes that will be assigned to this Campaign Partner record.</description>
    <inlineHelpText>This field determines the split of qualified intakes that will be assigned to this Campaign Partner record.</inlineHelpText>
    <label>Distribution Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>