unpackaged/main/default/objects/Campaign_Partner__c/fields/E_sig_CC_Email_Address_es__c.field-meta.xml
<CustomField>
    <fullName>E_sig_CC_Email_Address_es__c</fullName>
    <description>Enter a list of comma-separated email addresses to CC on the DropboxSign signature request email notification.</description>
    <inlineHelpText>Enter a list of comma-separated email addresses to CC on the DropboxSign signature request email notification.</inlineHelpText>
    <label>E-sig CC Email Address(es)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>