unpackaged/main/default/objects/Campaign_Partner__c/fields/E_Sig_Message__c.field-meta.xml
<CustomField>
    <fullName>E_Sig_Message__c</fullName>
    <description>Enter the email message you would like to appear in the DropboxSign signature request email notification.</description>
    <inlineHelpText>Enter the email message you would like to appear in the DropboxSign signature request email notification.</inlineHelpText>
    <label>E-Sig Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>