unpackaged/main/default/objects/Campaign_Partner__c/fields/E_sig_Title__c.field-meta.xml
<CustomField>
    <fullName>E_sig_Title__c</fullName>
    <description>Enter the title of the document as you would like it to appear in the DropboxSign signature request email notification.</description>
    <inlineHelpText>Enter the title of the document as you would like it to appear in the DropboxSign signature request email notification.</inlineHelpText>
    <label>E-sig Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>