unpackaged/main/default/objects/Campaign_Partner__c/fields/E_Sign_Packet_Criteria__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Packet_Criteria__c</fullName>
    <description>Used in automation to pull campaign partner information to assign out the specific campaign partner and also tie the appropriate Packet for signatures along with it.  This allows a scalable approach to create a dynamic E-Sign Packet experience.</description>
    <inlineHelpText>Update this to Determine what E-Sign packet should be selected when a partner is added to intake</inlineHelpText>
    <label>E-Sign Packet Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>