unpackaged/main/default/objects/Campaign_Partner__c/fields/E_sign_Subject__c.field-meta.xml
<CustomField>
    <fullName>E_sign_Subject__c</fullName>
    <description>Enter the subject of the email message you would like to appear in the DropboxSign signature request email notification AND as the title of the document you would like to appear in the DropboxSign signature reequest sms message</description>
    <inlineHelpText>Enter the subject of the email message you would like to appear in the DropboxSign signature request email notification AND as the title of the document you would like to appear in the DropboxSign signature reequest sms message</inlineHelpText>
    <label>E-sig Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>