unpackaged/main/default/objects/Campaign_Partner__c/fields/Esignature_Template__c.field-meta.xml
<CustomField>
    <fullName>Esignature_Template__c</fullName>
    <description>Esignature packet that will be generated/sent on an Intake assigned to this Campaign Partner</description>
    <inlineHelpText>Esignature packet that will be generated/sent on an Intake assigned to this Campaign Partner</inlineHelpText>
    <label>Esignature Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>