unpackaged/main/default/objects/Campaign_Partner__c/fields/Expected_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Distribution__c</fullName>
    <description>Campaign Total Intakes Assigned * Distribution Percent</description>
    <formula>Campaign__r.Total_Intakes_Assigned__c * Distribution_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campaign Total Intakes Assigned * Distribution Percent</inlineHelpText>
    <label>Expected Distribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>