unpackaged/main/default/objects/Campaign_Partner__c/fields/FL_E_sig_Packet_POA__c.field-meta.xml
<CustomField>
    <fullName>FL_E_sig_Packet_POA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FL E-sig Packet (POA)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (FL E-sig Packet (POA))</relationshipLabel>
    <relationshipName>Campaign_Partners5</relationshipName>
    <type>Lookup</type>
</CustomField>