unpackaged/main/default/objects/Campaign_Partner__c/fields/FL_Non_Standard_E_Sig_POA__c.field-meta.xml
<CustomField>
    <fullName>FL_Non_Standard_E_Sig_POA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to hold a campaign partner member&#39;s related e-signature filed packet that is related to a self signer format. This works in conjunction with automation that pulls files into the button to create e-sig file to send off to clients. This is for non standard ones that have exceptions.</description>
    <inlineHelpText>Florida base documents for Non Standard file for Power of Attorney Signer. A variation to the standard that requires separate considerations.</inlineHelpText>
    <label>FL Non-Standard E-Sig (POA)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (FL Non-Standard E-Sig (POA))</relationshipLabel>
    <relationshipName>FL_Non_Standard_POA</relationshipName>
    <type>Lookup</type>
</CustomField>