unpackaged/main/default/objects/Campaign_Partner__c/fields/Intakes_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Intakes_Assigned__c</fullName>
    <description>DLRS Rollup of all Intakes where Campaign Partner lookup on Intake matches this Campaign/Partner record.</description>
    <inlineHelpText>DLRS Rollup of all Intakes where Campaign Partner lookup on Intake matches this Campaign/Partner record.</inlineHelpText>
    <label>Intakes Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>