unpackaged/main/default/objects/Campaign_Partner__c/fields/Intakes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Intakes_Sent__c</fullName>
    <description>DLRS Rollup of all Intakes where Campaign Partner lookup on Intake matches this Campaign/Partner record AND Status equals &#39;Referred Out&#39;</description>
    <inlineHelpText>DLRS Rollup of all Intakes where Campaign Partner lookup on Intake matches this Campaign/Partner record AND Status equals &#39;Referred Out&#39;</inlineHelpText>
    <label>Intakes Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>