unpackaged/main/default/objects/Campaign_Partner__c/fields/Last_X_Intakes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_X_Intakes_Sent__c</fullName>
    <label>Last X Intakes Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>