unpackaged/main/default/objects/Campaign_Partner__c/fields/Merge_Packet__c.field-meta.xml
<CustomField>
    <fullName>Merge_Packet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Docrio merge packet that will be generated when clicking the Create Referral Packet button on an Intake assigned to this Campaign Partner</description>
    <inlineHelpText>Docrio merge packet that will be generated when clicking the Create Referral Packet button on an Intake assigned to this Campaign Partner</inlineHelpText>
    <label>Referral Packet</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners</relationshipLabel>
    <relationshipName>Campaign_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>