unpackaged/main/default/objects/Campaign_Partner__c/fields/Non_FL_E_sig_Packet_Other__c.field-meta.xml
<CustomField>
    <fullName>Non_FL_E_sig_Packet_Other__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non FL E-sig Packet (Other)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (Non FL E-sig Packet (Other))</relationshipLabel>
    <relationshipName>Campaign_Partners3</relationshipName>
    <type>Lookup</type>
</CustomField>