unpackaged/main/default/objects/Campaign_Partner__c/fields/Non_FL_E_sig_Packet_Other_Id__c.field-meta.xml
<CustomField>
    <fullName>Non_FL_E_sig_Packet_Other_Id__c</fullName>
    <formula>CASESAFEID(Non_FL_E_sig_Packet_Other__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non FL E-sig Packet (Other) Id</label>
    <type>Text</type>
</CustomField>