unpackaged/main/default/objects/Campaign_Partner__c/fields/Non_FL_E_sig_Template__c.field-meta.xml
<CustomField>
    <fullName>Non_FL_E_sig_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Docrio merge packet that will be generated when clicking the Create E-sig Packet button on an Intake assigned to this Campaign Partner IF Case State != &#39;FL Florida&#39;</description>
    <inlineHelpText>Docrio merge packet that will be generated when clicking the Create E-sig Packet button on an Intake assigned to this Campaign Partner IF Case State != &#39;FL Florida&#39;</inlineHelpText>
    <label>Non FL E-sig Packet (Self)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (Non FL E-sig Template)</relationshipLabel>
    <relationshipName>Campaign_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>