unpackaged/main/default/objects/Campaign_Partner__c/fields/Non_Standard_E_Sig_Packet_Self__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_E_Sig_Packet_Self__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to hold a campaign partner member&#39;s related e-signature filed packet that is related to a self signer format. This works in conjunction with automation that pulls files into the button to create e-sig file to send off to clients.  This is for non standard ones that have exceptions.</description>
    <inlineHelpText>Non Standard file for Self Signer. A variation to the standard that requires separate considerations.</inlineHelpText>
    <label>Non-Standard E-Sig Packet (Self)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (Non-Standard E-Sig Packet (Self))</relationshipLabel>
    <relationshipName>Campaign_Partners7</relationshipName>
    <type>Lookup</type>
</CustomField>