unpackaged/main/default/objects/Campaign_Partner__c/fields/Other_Option_Fill_In__c.field-meta.xml
<CustomField>
    <fullName>Other_Option_Fill_In__c</fullName>
    <description>Used to fill in the &quot;other&quot; option chosen or for specific info that is required for whatever reason that no one knows.</description>
    <inlineHelpText>Other Option or fill in section when needed.</inlineHelpText>
    <label>Other Option Fill In</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>