unpackaged/main/default/objects/Campaign_Partner__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Partner object this Campaign/Partner junction object is related to.</description>
    <inlineHelpText>Lookup to the Partner object this Campaign/Partner junction object is related to.</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Campaign Partners</relationshipLabel>
    <relationshipName>Campaign_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>