unpackaged/main/default/objects/Campaign_Partner__c/fields/Qualified_Intakes_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Intakes_Assigned__c</fullName>
    <label>Qualified Intakes Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>