unpackaged/main/default/objects/Campaign_Partner__c/fields/Referral_Email_CC_Address_es__c.field-meta.xml
<CustomField>
    <fullName>Referral_Email_CC_Address_es__c</fullName>
    <label>Referral Email CC Address(es)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>