unpackaged/main/default/objects/Campaign_Partner__c/fields/Resend_Files_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Resend_Files_Email_Template__c</fullName>
    <label>Resend Files Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>