unpackaged/main/default/objects/Campaign_Partner__c/fields/Split_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Fee_Percentage__c</fullName>
    <description>This field has been DEPRECATED. Please use the Split/Fee Object on the Campaign Partner instead. The split / fee percentage agreed to with the Partner for this Campaign. This value will be stamped on Intake when the Intake is assigned to a Campaign Partner record.</description>
    <inlineHelpText>This field has been DEPRECATED. Please use the Split/Fee Object on the Campaign Partner instead. The split / fee percentage agreed to with the Partner for this Campaign. This value will be stamped on Intake when the Intake is assigned to a Campaign Partner record.</inlineHelpText>
    <label>Split / Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>