unpackaged/main/default/objects/Campaign_Partner__c/fields/Standard_E_Sig_Packet_Other__c.field-meta.xml
<CustomField>
    <fullName>Standard_E_Sig_Packet_Other__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to hold a campaign partner member&#39;s related e-signature filed packet that is related to a person related to signer format. This works in conjunction with automation that pulls files into the button to create e-sig file to send off to clients.</description>
    <inlineHelpText>Standard file for Other party acting on behalf of Signer. See variation for unique circumstances for Partner firms.</inlineHelpText>
    <label>Standard E-Sig Packet (Other)</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Campaign Partners (Standard E-Sig Packet (Other))</relationshipLabel>
    <relationshipName>Campaign_Partners_Std_Other</relationshipName>
    <type>Lookup</type>
</CustomField>