unpackaged/main/default/objects/Campaign_Partner__c/listViews/Active_Campaign_Partners.listView-meta.xml
<ListView>
    <fullName>Active_Campaign_Partners</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Partner__c</columns>
    <columns>Distribution_Percent__c</columns>
    <columns>Split_Fee_Percentage__c</columns>
    <columns>Delivery_Flow_Name__c</columns>
    <columns>Intakes_Assigned__c</columns>
    <columns>Intakes_Sent__c</columns>
    <columns>API_Integration_Description__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Resend_Files_Email_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Campaign Partners</label>
</ListView>