unpackaged/main/default/objects/Campaign_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Partner__c</columns>
    <columns>Distribution_Percent__c</columns>
    <columns>Delivery_Flow_Name__c</columns>
    <columns>Intakes_Assigned__c</columns>
    <columns>Intakes_Sent__c</columns>
    <columns>API_Integration_Description__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Split_Fee_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>